Droid Sans Mono has alignment issues, removed it from list

--- a/shellinabox/styles.css
+++ b/shellinabox/styles.css
@@ -21,7 +21,7 @@
 #vt100 #cursize {
   background:           #EEEEEE;
   border:               1px solid black;
-  font-family: "Droid Sans Mono", "DejaVu Sans", "Everson", "Andale", "Arial", sans-serif;
+  font-family:          "DejaVu Sans Mono", "Everson Mono", "FreeMono", "Andale Mono", monospace;
   font-size:            large;
   font-weight:          bold;
   padding:              1ex;
@@ -45,7 +45,7 @@
 }
 
 #vt100 #console, #vt100 #alt_console, #vt100 #cursor, #vt100 #lineheight, #vt100 .hidden pre { 
-  font-family:          "Droid Sans Mono", "DejaVu Sans Mono", "Everson Mono", "FreeMono", "Andale Mono", monospace;
+  font-family:          "DejaVu Sans Mono", "Everson Mono", "FreeMono", "Andale Mono", monospace;
 }
 
 #vt100 #lineheight {
@@ -164,7 +164,7 @@
 }
 
 #vt100 #keyboard .box {
-  font-family: "Droid Sans Mono", "DejaVu Sans", "Everson", "Andale", "Arial", sans-serif;
+  font-family: "Droid Sans", "DejaVu Sans", "Everson", "Andale", "Arial", sans-serif;
   background-color:     #cccccc;
   padding:              .8em;
   float:                left;
